changed DSN logo link

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 			    <div class="col-lg-12 text-center" >
             
                     <div class="col-lg-12 text-center">
-                        <a href="https://dsn.uoregon.edu/" target="_blank"><img src="https://blogs.uoregon.edu/dsnlab/files/2018/02/dsnLogo_200-tdvj5z.png" class="img-responsive center-block" alt="DSN Lab" id="DSN_Lab"></a>
+                        <a href="https://dsn.uoregon.edu/" target="_blank"><img src="https://dsn.uoregon.edu/files/2017/02/dsnLogo_200-tdvj5z.png" class="img-responsive center-block" alt="DSN Lab" id="DSN_Lab"></a>
                     </div>
 
             
