--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <br>
 			<a href="https://goo.gl/forms/OdDPagMuMhk5yPE02" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
       <a href="https://brainhack-slack-invite.herokuapp.com/" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Brainhack on Slack</a>
-      <a href="http://events.brainhack.org/global2018/projects.html" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
+      <a href="http://brainhack.org/global2018/projects.html" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
 
 			<br><br><br>
             <p>Photo by <a href="">Eugene Skinner</a></p>
@@ -180,7 +180,7 @@
             <div class="row text-center">
                  <div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
 					<p><h3><a href="https://goo.gl/forms/OdDPagMuMhk5yPE02" target="_blank">Registration for the Eugene Brainhack 2018 is now open!</a></h3></p>
-		    <p>The Eugene Brainhack 2018 is an official satellite event of the <a href="http://events.brainhack.org/global2018/" target="_blank">International Global Brainhack 2018</a> that is organized by
+		    <p>The Eugene Brainhack 2018 is an official satellite event of the <a href="http://brainhack.org/global2018/" target="_blank">International Global Brainhack 2018</a> that is organized by
             
             Cameron Craddock
             
