--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 			    <div class="col-lg-12 text-center" >
             
                     <div class="col-lg-12 text-center">
-                        <a href="https://psychology.uoregon.edu/" target="_blank"><img src="https://pbs.twimg.com/profile_images/733062639325040641/6QzQWlvL_400x400.jpg" class="img-responsive center-block" alt="UO Department of Psychology" width="400" id="UO_Department_of_Psychology"></a>
+                        <a href="https://psychology.uoregon.edu/" target="_blank"><img src="http://pages.uoregon.edu/caspages/cas-design-toolkit-images/CAS-Natural%20Sciences/PSY/PSY%20PNG%20files/PSY-name.png" class="img-responsive center-block" alt="UO Department of Psychology" width="400" id="UO_Department_of_Psychology"></a>
                     </div>
 
             
