--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3 class="text-color-blue">Hosted at: <a href="https://www.uoregon.edu/">HEDCO & Lewis Integrative Science Building</a></h3>
+                    <h3 class="text-color-blue">Hosted at: <a href="https://map.uoregon.edu/">HEDCO & Lewis Integrative Science Building</a></h3>
                 </div>
             </div>
         </div>
