--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 			    <div class="col-lg-12 text-center" >
             
                     <div class="col-lg-12 text-center">
-                        <a href="https://gradschool.uoregon.edu/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/Uof_Oregon_logo.png" class="img-responsive center-block" alt="UO Graduate School" id="UO_Graduate_School"></a>
+                        <a href="https://gradschool.uoregon.edu/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/Uof_Oregon_logo.png" class="img-responsive center-block" alt="UO Graduate School" id="UO_Graduate_School">Graduate School</a>
                     </div>
 
             
