--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					<h4>Dates: November 15-17, 2019</h4>
 					<h4>Costs: Free to attend. Breakfast, lunch, dinner and coffee provided.</h4>
 					<h4>Location: <a href="#map"> Eugene, OR, USA</a></h4>
-					<p>Participants are encouraged to post project ideas to <a href="http://www.brainhack.org" target="_blank">www.brainhack.org</a> and to submit a report describing their project to the <a href="http://www.brainhack.org/proceedings">2019 Brainhack Proceedings</a> that will be published by <a href="http://gigasciencejournal.com/">Gigascience</a> after the event.</p>
+					<p>Participants are encouraged to post project ideas to <a href="http://www.brainhack.org" target="_blank">www.brainhack.org</a> and to submit a report describing their project to the <a href="http://www.brainhack.org/proceedings_2018.html">2019 Brainhack Proceedings</a> that will be published by <a href="http://gigasciencejournal.com/">Gigascience</a> after the event.</p>
 					<p>Please join <a href="https://brainhack-slack-invite.herokuapp.com/" target="_blank">the Brainhack Slack project</a> for updated information on the developing Hackathon content and to contribute your own ideas.</p>
                    </div>
 			</div>
