--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				</div>
 		    </div>
             <br>
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLSefc43iEvd9YvRd32gIJjXjiPeHY8VFVXM91aNvCJjnUPLiHQ/viewform?usp=sf_link" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSeFfdJ3e5ghuae88GZvzSJCmLEyCJgn-kbWCS6NWEr2tvD85w/viewform" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
       <a href="https://brainhack-slack-invite.herokuapp.com/" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Brainhack on Slack</a>
       <a href="http://brainhack.org/global2018/projects.html" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
 
