--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 				            11:30pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Git & Docker - HEDCO 130T
+				            TBA - HEDCO 130T
 			            </div>
 				    </div>
 
@@ -271,16 +271,16 @@
 				            1:30pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Brain Imaging Data Structure (BIDS) - HEDCO 130T
+				            Shiny Apps - HEDCO 130T
 			            </div>
 				    </div>
 
 					<div class="row top5">
 			            <div class="col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 col-sm-5 col-sm-offset-0 col-xs-5 text-dark">
-				            2:00pm
+				            1:45 pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            BIDS apps - HEDCO 130T
+				            TBA - HEDCO 130T
 			            </div>
 				    </div>
 
@@ -584,17 +584,11 @@
                     </h3>
                     <ul class="list-unstyled">
 
-                        <li><h4>Dani Cosme</h4></li>
-
-                        <li><h4>Brendan Cullen</h4></li>
-
-                        <li><h4>Krista DeStasio</h4></li>
-
                         <li><h4>Kate Mills</h4></li>
 
-                        <li><h4>Nandi Vijayakumar</h4></li>
+                        <li><h4>Lucy Whitmore</h4></li
 
-
+                        
                     </ul><br>
                 </div>
             </div>
