--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 				            9:00am
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Morning tea/coffee and welcome - HEDCO 130T
+				            Morning tea/coffee and welcome - HEDCO 230T
 			            </div>
 				    </div>
 
@@ -226,7 +226,7 @@
 				            9:30am
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Preregistration - HEDCO 130T
+				            Preregistration - HEDCO 230T
 			            </div>
 				    </div>
 
@@ -235,7 +235,7 @@
 				            10:15am
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Coffee break - HEDCO 130T
+				            Coffee break - HEDCO 230T
 			            </div>
 				    </div>
 
@@ -244,7 +244,7 @@
 				            10:45am
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Working with open datasets - HEDCO 130T
+				            Working with open datasets - HEDCO 230T
 			            </div>
 				    </div>
 
@@ -253,7 +253,7 @@
 				            11:30pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            TBA - HEDCO 130T
+				            Git & Version Control - HEDCO 230T
 			            </div>
 				    </div>
 
@@ -262,7 +262,7 @@
 				            12:30pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Lunch - HEDCO 130T
+				            Lunch - HEDCO 230T
 			            </div>
 				    </div>
 
@@ -271,7 +271,7 @@
 				            1:30pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Shiny Apps - HEDCO 130T
+				            Shiny Apps - HEDCO 230T
 			            </div>
 				    </div>
 
@@ -280,7 +280,7 @@
 				            1:45 pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            TBA - HEDCO 130T
+				            TBA - HEDCO 230T
 			            </div>
 				    </div>
 
@@ -289,7 +289,7 @@
 				            2:30pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Coffee break - HEDCO 130T
+				            Coffee break - HEDCO 230T
 			            </div>
 				    </div>
 
@@ -298,7 +298,7 @@
 				            3:00pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Hands-on workshop - HEDCO 130T
+				            Hands-on workshop - HEDCO 230T
 			            </div>
 				    </div>
 
@@ -588,7 +588,7 @@
 
                         <li><h4>Lucy Whitmore</h4></li
 
-                        
+
                     </ul><br>
                 </div>
             </div>
