--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				<div class="col-md-6 col-lg-4 col-sm-10 col-xs-10 col-md-offset-0 col-lg-offset-0 col-sm-offset-1 col-xs-offset-1">
 					<div class="row top5 text-center">
 				        <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2 text-dark">
-					        <h4>Friday, November 15</h4>
+					        <h4>Friday, November 15 - HEDCO 230T</h4>
 				        </div>
 				    </div>
 
@@ -217,7 +217,7 @@
 				            9:00am
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Morning tea/coffee and welcome - HEDCO 230T
+				            Morning tea/coffee and welcome
 			            </div>
 				    </div>
 
@@ -226,7 +226,7 @@
 				            9:30am
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Preregistration - HEDCO 230T
+				            Preregistration - Jessica Flannery
 			            </div>
 				    </div>
 
@@ -235,7 +235,7 @@
 				            10:15am
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Coffee break - HEDCO 230T
+				            Coffee break
 			            </div>
 				    </div>
 
@@ -244,7 +244,7 @@
 				            10:45am
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Working with open datasets - HEDCO 230T
+				            Working with open datasets - Kate Mills
 			            </div>
 				    </div>
 
@@ -253,7 +253,7 @@
 				            11:30pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Git & Version Control - HEDCO 230T
+				            Git & Version Control - Jonathan Cain & Gabriele Hayden
 			            </div>
 				    </div>
 
@@ -271,7 +271,7 @@
 				            1:30pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Shiny Apps - HEDCO 230T
+				            Shiny Apps - Teresa Cheng
 			            </div>
 				    </div>
 
@@ -280,7 +280,7 @@
 				            1:45 pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            TBA - HEDCO 230T
+				            TBA
 			            </div>
 				    </div>
 
@@ -298,7 +298,7 @@
 				            3:00pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Hands-on workshop - HEDCO 230T
+				            Hands-on workshop 
 			            </div>
 				    </div>
 
