--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 				            12:30pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Lunch - HEDCO 230T
+				            Lunch
 			            </div>
 				    </div>
 
@@ -280,7 +280,7 @@
 				            1:45 pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            TBA
+				            Reproducible Experiments & Data - Jonny Saunders
 			            </div>
 				    </div>
 
@@ -289,7 +289,7 @@
 				            2:30pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Coffee break - HEDCO 230T
+				            Coffee break
 			            </div>
 				    </div>
 
@@ -298,7 +298,7 @@
 				            3:00pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Hands-on workshop 
+				            Hands-on workshop
 			            </div>
 				    </div>
 
