--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 				            1:30pm
 			            </div>
 			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-				            Shiny Apps - Teresa Cheng
+				            Shiny Apps - Theresa Cheng
 			            </div>
 				    </div>
 
